# Rashamon

./: .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.qwen/: settings.json
apps/draw-desktop/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/draw-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/draw-desktop/src-tauri/capabilities/: default.json
apps/draw-desktop/src-tauri/src/: lib.rs  main.rs
crates/rashamon_core/: Cargo.toml
crates/rashamon_core/src/: components.rs  document.rs  error.rs  geometry.rs  layout.rs  lib.rs  scene_graph.rs  styles.rs  transform.rs
crates/rashamon_file_format/: Cargo.toml
crates/rashamon_file_format/src/: lib.rs
docs/: 00_INDEX.md
docs/01_VISION/: Competitive Strategy.md  Differentiators.md  Product Philosophy.md  Project Vision.md  Why Rashamon Exists.md
docs/02_STRATEGY/: Brand and Trademark Policy.md  MVP Scope.md  Non-Goals.md  Product Roadmap.md  Release Strategy.md
docs/03_PRODUCTS/: Rashamon Draw.md  Rashamon Motion.md  Rashamon Photo.md  Shared Platform.md
docs/04_ARCHITECTURE/: ADR-001 Core Stack.md  ADR-002 MVP Product Order.md  ADR-003 Project Format Principles.md  Data Model.md  Monorepo Structure.md  Performance Strategy.md  Plugin System.md  Project File Format.md  Rendering Architecture.md  Security Model.md  System Architecture.md  Workspace Structure.md
docs/05_EXECUTION/: Backlog Structure.md  Definition of Done.md  Delivery Phases.md  Milestones.md  Risks.md
docs/06_AGENTS/: Agent Index.md  Agent Roles and Responsibilities.md  Collaboration Protocol.md  Prompt Routing Rules.md
docs/07_COMMUNITY/: Contribution Model.md  Fork Policy.md  Governance.md  Open Source Strategy.md  RFC Process.md
docs/08_BRAND/: Brand Core.md  Naming Rules.md  Visual Direction.md  Voice and Tone.md
docs/09_GITHUB/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/10_APPENDICES/: Glossary.md  Open Questions.md  (+1 more)
(+25 files in other folders)
