[workspace]
members = [
    "crates/rashamon_core",
    "crates/rashamon_file_format",
    "apps/draw-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "TBD"
authors = ["kamelot-exe <kentar2022@gmail.com>"]
repository = "https://github.com/kamelot-exe/Rashamon"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
