[package]
name = "rashamon_file_format"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

description = "File format serialization for Rashamon Draw (.rdraw)"

[dependencies]
rashamon_core = { path = "../rashamon_core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
